fix mobile dashboard overflow

--- a/src/app/components/dashboard/dashboard-tile/dashboard-tile.component.scss
+++ b/src/app/components/dashboard/dashboard-tile/dashboard-tile.component.scss
@@ -6,6 +6,7 @@
   border-radius: 4px;
   flex-direction: column;
   max-width: 100%;
+  box-sizing: border-box;
 
   h2 {
     margin-top: 0;
